# segment-anything-model-2

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.qml
